# vzense-rust

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO  TODO.txt  build.rs
examples/: basic.rs  basic_dcam560.rs  basic_nyx650.rs  basic_scepter.rs  main.rs
src/: color_map.rs  device.rs  frame.rs  lib.rs  touch_detector.rs  util.rs
src/dcam560/: device.rs  frame.rs  mod.rs  touch_detector.rs
src/nyx650/: device.rs  frame.rs  mod.rs
src/scepter/: device.rs  frame.rs  mod.rs
src/util/: color_map.rs  mod.rs  touch_detector.rs
vzense-sys/: Cargo.toml  LICENSE.txt  README.md  build.rs
vzense-sys/bindings/: dcam560.rs  nyx650.rs  scepter.rs
vzense-sys/src/: lib.rs
vzense-sys/vzense/include/: Vzense_api_560.h
