[package]
name = "vzense-rust"
version = "0.2.4"
edition = "2021"
description = "High-level library for Vzense cameras"
categories = ["external-ffi-bindings", "computer-vision", "hardware-support"]
repository = "https://github.com/h-a-n-n-e-s/vzense-rust"
readme = "README.md"
license = "MIT AND BSD-3-Clause"
authors = ["Johannes Schoenke"]

[dependencies]
vzense-sys = { path = "vzense-sys", version = "0.2.0"}

[dev-dependencies]
show-image = "0.14.0"

[features]
dcam560 = []
docsrs = []
# uses the older API specifically for the DCAM560 model
# default = ["dcam560"]

# recreates the bindings for vzense-sys
# run-bindgen = ["vzense-sys/run-bindgen"]

# prevent running build.rs for docs.rs
[package.metadata.docs.rs]
features = ["docsrs"]

[profile.dev]
rpath = true

[profile.release]
rpath = true