[package]
name = "vzense-rust"
version = "0.3.0"
edition = "2024"
description = "High-level library for Vzense cameras"
categories = ["external-ffi-bindings", "computer-vision", "hardware-support"]
repository = "https://github.com/h-a-n-n-e-s/vzense-rust"
exclude = ["/lib"]
readme = "README.md"
license = "MIT AND BSD-3-Clause"
authors = ["Johannes Schoenke"]

# to prevent running build.rs for docs.rs
[package.metadata.docs.rs]
features = ["docsrs"]

[dependencies]
vzense-sys = { version = "0.3.0", path = "vzense-sys"}

[dev-dependencies]
show-image = "0.14.1"

[build-dependencies]
# minimal support for https requests
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "blocking"] }

[features]
# recreates the bindings for vzense-sys
run-bindgen = ["vzense-sys/run-bindgen"]
dcam560 = []
docsrs = []
# uses the older API specifically for the DCAM560 model
# default = ["dcam560"]
