[package]
name = "vzense-sys"
version = "0.1.0"
edition = "2021"
description = "Rust abstraction layer for the Vzense SDK C library"
repository = "https://github.com/h-a-n-n-e-s/vzense-rust/vzense-sys"
readme = "README.md"
license = "MIT"
authors = ["Johannes Schoenke"]

[build-dependencies]
bindgen = "0.70.1"
