[package]
name = "vzense-sys"
version = "0.1.2"
edition = "2021"
description = "Rust abstraction layer for the Vzense SDK C library"
repository = "https://github.com/h-a-n-n-e-s/vzense-rust/vzense-sys"
readme = "README.md"
license = "MIT"
authors = ["Johannes Schoenke"]

[build-dependencies]
bindgen = {version = "0.70.1", optional = true}

[features]
# uses the already created bindings
default = []
# recreates the bindings
run-bindgen = ["bindgen"]